# electric-sheep

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
.devcontainer/: .env.example  devcontainer.json  docker-compose.yml
migrations/2023-06-22-111632_init/: down.sql  up.sql
migrations/2023-08-22-121513_stats/: down.sql  up.sql
migrations/2023-09-04-114758_difficulty/: down.sql  up.sql
site/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
site/src/: app.html
site/src/api/: getDetails.ts
site/src/channel/: store.ts
site/src/components/: Button.svelte
site/src/routes/: +layout.svelte  +page.svelte
site/src/routes/chat/[id]/: +page.svelte  +page.ts  service.ts
site/src/stores/: chat.ts
src/: ai.rs  chat.rs  errors.rs  main.rs  messages.rs  models.rs  schema.rs
src/models/: category.rs  chat.rs  defect.rs  message.rs  persona.rs  question.rs
static/: chat.html  index.html
