[package]
name = "electric-sheep"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", default-features = false, features = ["postgres"] }
openai_api_rust = "0.1.8"
rand = "0.8.5"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.3"
features = ["diesel_postgres_pool"]
