[package]
name = "electric-sheep"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", default-features = false, features = ["postgres", "uuid"] }
fake = "2.6.1"
openai_api_rust = "0.1.8"
rand = "0.8.5"
serde = "1.0.164"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "uuid"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.3"
features = ["diesel_postgres_pool"]

[dependencies.uuid]
version = "1.3.4"
features = ["serde"]
